syntax = "proto3";

package com.uaepay.pos.ecr.acquire;

import "payby/com/uaepay/pos/ecr/common.proto";
import "payby/com/uaepay/pos/ecr/acquire.proto";

message RefundRequest {
  common.Money refundAmount = 1;
  optional string acquireOrderNo = 2;
  repeated Receipt printReceipts = 3;
  optional string refundMerchantOrderNo = 4;
  optional string acquireMerchantOrderNo = 5;
}

message RefundOrder {
  string refundOrderNo = 1;
  string acquireOrderNo = 2;
  common.Money refundAmount = 3;
  string status = 4;
  optional string refundMerchantOrderNo = 5;
  optional string acquireMerchantOrderNo = 6;
}

